tutorials/minikube/nginx/echoserver-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echoserver-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: echoserver.minikube
    http:
      paths:
      - path: /
        backend:
          serviceName: echoserver
          servicePort: 8080
  tls:
  - secretName: echoserver-tls-cert
    hosts:
    - echoserver.minikube
